[tool.poetry]
name = "eztech"
version = "0.1.0"
description = ""
authors = ["CLQuantizer <ezioxxk@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mkdocs = "^1.4.2"
mkdocs-material = "^9.0.6"
mkdocs-blog-plugin = "^0.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
